1. ) Extra file for GuTauS CLASSES and objects 2. ) Change of data structure CREDITNOTE_CHOSEN CLASS subordinated to the CREDITNOTES CLASS

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 include_0_db_conektion.php
 
+mobile/js/user-event-mobile-sehr-klein.js
+mobile/js/user-event-mobile_Cannot read property 'length' of undefined.js
+mobile/user-event-mobile.js
+include_0_db_conektion.php
